--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ var x = setInterval(function() {
         <center>
             <h1>&#9758; Introduction video &#9756;</h1>
             <br>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/Y7mDoofMp8c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/RlBKnohVUK4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <br><br>
         </center>
         <!-- clock scene -->
