--- a/Aboutus.html
+++ b/Aboutus.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Kovo.Tech.Studio</title>
+        <title>About</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="mystyle.css">
     </head>
@@ -33,7 +33,7 @@
           <h3>We are young developers. We have got 3 members but we can be good as the other. <br> We programming in C#, use unity as a game engine, Blender for 3d modeling,<br> Flaticon for creating icons, Beep box for music and canvas for graphic.</h3>
           <img src="team.png"height="60%" width="45%">
           <!--Photo by Natalie Pedigo on Unsplash-->
-        </div-about2>
+        </div-about2>  
         </center>
         <!-- center border -->
         <center>
@@ -68,7 +68,7 @@
         </div-about>
         </center>
         <!-- end border -->
-        <div-end><p>All rights reserved Kovo-Tech-Studios 2020.</p></div-end>
+        <div-end><p>Created by Anže Kovač R1A 2019/2020  <a href ="Privacy.html">Privacy list</a></p></div-end>
 
     </body>
 </html>
