--- a/Credits.html
+++ b/Credits.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Kovo.Tech.Studio</title>
+        <title>credits</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="mystyle.css">
     </head>
@@ -77,6 +77,6 @@
         </div-credits>
         </center>
         <!-- end -->
-        <div-end><p>All rights reserved Kovo-Tech-Studios 2020.</p></div-end>
+        <div-end><p>Created by Anže Kovač R1A 2019/2020  <a href ="Privacy.html">Privacy list</a></p></div-end>
     </body>
 </html>
