--- a/Falling-Box.html
+++ b/Falling-Box.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Kovo.Tech.Studio</title>
+        <title>falling box</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="mystyle.css">
     </head>
@@ -65,12 +65,51 @@
             </div-projects-box-holder>
             <h2-1>Platforms</h2-1>
             <br>
-            <img src="gp.png"height="15%" width="10%">
-            <center><p><b>!Comming Soon!</b></p></center>
+            <center>
+            <table style="width:80%">
+              <tr>
+                <th>SUBJECT</th>
+                <th>ANDROID</th> 
+                <th>IOS</th>
+              </tr>
+              <tr>
+                <td>available</td>
+                <td> &#10004;</td>
+                <td> &#10008;</td>
+              </tr>
+              <tr>
+                <td>All ages</td>
+                <td> &#10004;</td>
+                <td> &#10004;</td>
+              </tr>
+              <tr>
+                <td>All genders</td>
+                <td> &#10004;</td>
+                <td> &#10004;</td>
+              </tr>
+              <tr>
+                <td>Easy to play</td>
+                <td> &#10004;</td>
+                <td> &#10004;</td>
+              </tr>
+              <tr>
+                <td>Free 50 coins options</td>
+                <td> &#10004;</td>
+                <td> &#10008;</td>
+              </tr>
+              <tr>
+                <td>Price</td>
+                <td>Free</td>
+                <td>Free</td>
+              </tr>
+            </table>
+            
+            <p><b>It's available here &#10143; <a href="https://play.google.com/store/apps/details?id=com.Kovo.tech.studio.FallingBox"><img src ="gp.png" height="5%" width="3%"></a></b></p>
+          </center>
         </div-falling-box>
         </center>
 
         <!-- end -->
-        <div-end><p>All rights reserved Kovo-Tech-Studios 2020.</p></div-end>
+        <div-end><p>Created by Anže Kovač R1A 2019/2020  <a href ="Privacy.html">Privacy list</a></p></div-end>
     </body>
 </html>
