--- a/Privacy.html
+++ b/Privacy.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>galery</title>
+        <title>Privacy list</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="mystyle.css">
     </head>
@@ -29,17 +29,24 @@
         <!-- center border -->
         <center>
         <div-falling-box>
-          <h2-1>falling box PIC:</h2-1>
-          <div-projects-box-holder>
-            <div class="zoom"><img src="sc.png"height="200%" width="150%"></div>
-            <div class="zoom"><img src="sc2.png"height="200%" width="150%"></div>
-            <div class="zoom"><img src="sc3.png"height="200%" width="150%"></div>
-            <div class="zoom"><img src="sc4.png"height="200%" width="150%"></div>
-            <div class="zoom"><img src="sc5.png"height="200%" width="150%"></div>
-          </div-projects-box-holder>
-        </div-falling-box>
-        </center>
+            <h1>&#9749; Privacy list &#9749;</h1>
+            <h2-1>INFO</h2-1>
+            <br>
+            <ol type="a">
+                <li>Game development Studio</li>
+                <li>PC and Android games</li>
+                <li>Created in 2020</li>
+              </ol>
+            <h2-1>Source</h2-1>
+            <ol type="I">
+                <li><div>Icons made by <a href="https://www.flaticon.com/free-icon/cloud-computing_1252542" title="itim2101">itim2101</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></li>
+                <li>Songs made in <a href ="https://beepbox.co/#8n31s0k0l00e03t2mm0a7g0fj07i0r1o3210T5v1L4u43q1d1f7y1z7C1c0h0HT_QT_ItRAJJAAzT1v1L4u27q1d1f9y0z7C0c0A0F2B6V7Q4190Pf640E0111T1v1L4u34q1d5f7y1z7C0c0AcFhB3V6Q01a5P9939E0000T2v1L4u15q0d1f8y0z1C2w0b4h400000000h4g000000014h000000004h400000000p16000000">beep box</a></li>
+                <li>3d models made by <a href="https://www.blender.org/">blender</a> </li>
+              </ol>
 
+            
+
+        </div-falling-box>
         <!-- end -->
         <div-end><p>Created by Anže Kovač R1A 2019/2020  <a href ="Privacy.html">Privacy list</a></p></div-end>
     </body>
