--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Kovo.Tech.Studio</title>
+        <title>home</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="mystyle.css">
         <script src="moj.js"></script>
@@ -139,7 +139,7 @@ var x = setInterval(function() {
             <a href="https://discord.gg/zPFe8c"><img src ="blender.png"height="15%" width="30%"></a>
         </div-software>
         <!-- end border -->
-        <div-end><p>All rights reserved Kovo-Tech-Studios 2020.</p></div-end>
+        <div-end><p>Created by Anže Kovač R1A 2019/2020  <a href ="Privacy.html">Privacy list</a></p></div-end>
 
     </body>
 </html>
