--- a/Projects.html
+++ b/Projects.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Kovo.Tech.Studio</title>
+        <title>projects</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="mystyle.css">
     </head>
@@ -46,6 +46,6 @@
         <!--Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>-->
         </center>
         <!-- end -->
-        <div-end><p>All rights reserved Kovo-Tech-Studios 2020.</p></div-end>
+        <div-end><p>Created by Anže Kovač R1A 2019/2020  <a href ="Privacy.html">Privacy list</a></p></div-end>
     </body>
 </html>
