--- a/Joinus.html
+++ b/Joinus.html
@@ -59,6 +59,9 @@
           </div>
           
         </div-center>
+        <div-center2>
+        
+        </div-center2>
         </center>
         <!-- end border -->
         <div-end><p>Created by Anže Kovač R1A 2019/2020  <a href ="Privacy.html">Privacy list</a></p></div-end>
