--- a/Joinus.html
+++ b/Joinus.html
@@ -25,7 +25,7 @@
           <a href=Galery.html>Galery</a>
           <a href=Aboutus.html> About us</a>
           <a href=Joinus.html>Join us</a>
-        </div>s
+        </div>
         <!-- center border -->
         <center>
         <div-center>
